--- a/src/Databases.Interfaces/Databases.Interfaces.csproj
+++ b/src/Databases.Interfaces/Databases.Interfaces.csproj
@@ -1,22 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
     <AssemblyName>Peereflits.Shared.Databases.Interfaces</AssemblyName>
     <RootNamespace>Peereflits.Shared.Databases</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup>
-    <ApplicationIcon>..\Solution Items\favicon.ico</ApplicationIcon>
-    <OutputPath>bin\$(Configuration)\</OutputPath>
-    <LangVersion>latest</LangVersion>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <PropertyGroup>
-    <Authors>Peereflits</Authors>
-    <Copyright>No Copyright ©, The Netherlands</Copyright>
     <Description>Peereflits.Shared.Databases.Interfaces is an interface library for managing database interaction.</Description>
-    <Product>Peereflits.Shared.Databases</Product>
   </PropertyGroup>
 
   <PropertyGroup Label="Package">
@@ -30,17 +25,6 @@
 Peereflits.Shared.Databases is a library for managing database interaction.
 This component is a shared infrastructure library of Peereflits.
     </PackageDescription>
-  </PropertyGroup>
-
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugType>full</DebugType>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsAsErrors />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsAsErrors />
   </PropertyGroup>
 
   <ItemGroup>
