Upgrade to net8.0

--- a/src/Databases.Interfaces/Databases.Interfaces.csproj
+++ b/src/Databases.Interfaces/Databases.Interfaces.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
     <AssemblyName>Peereflits.Shared.Databases.Interfaces</AssemblyName>
     <RootNamespace>Peereflits.Shared.Databases</RootNamespace>
+    <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup>
