--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   API_KEY : ${{ secrets.PAT_CLASSIC }}
-  DOTNET_VERSION: 7.0.x
+  DOTNET_VERSION: 8.0.x
   DOTNET_SOLUTION: src/Peereflits.Shared.Databases.sln
 
 jobs:
@@ -38,7 +38,7 @@ jobs:
         dotnet build ${{ env.DOTNET_SOLUTION }} --configuration Release --no-restore
 
     - name: Run unit tests
-      run: dotnet test **/*.Tests.dll --filter "Category!=Integration"
+      run: dotnet test ${{ env.DOTNET_SOLUTION }} --configuration Release --no-restore --no-build --filter "Category!=Integration" --verbosity normal
 
     - name: Pack & Push
       run: |
