Updated icons, minor improvements to build scrrips

--- a/src/Databases/Databases.csproj
+++ b/src/Databases/Databases.csproj
@@ -18,6 +18,7 @@
   <PropertyGroup Label="Package">
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageIcon>PackageIcon.png</PackageIcon>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/peereflits/Shared.Databases.git?path=%2FREADME.md&amp;_a=preview</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/peereflits/Shared.Databases.git</RepositoryUrl>
