--- a/src/Databases.Tests/Databases.Tests.csproj
+++ b/src/Databases.Tests/Databases.Tests.csproj
@@ -3,43 +3,31 @@
   <PropertyGroup>
     <AssemblyName>Peereflits.Shared.Databases.Tests</AssemblyName>
     <RootNamespace>Peereflits.Shared.Databases.Tests</RootNamespace>
-    <TargetFrameworks>net6.0;net8.0;net9.0</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup>
+    <IsTestProject>true</IsTestProject>
     <IsPackable>false</IsPackable>
-  </PropertyGroup>
-
-  <PropertyGroup>
     <Description>Peereflits.Shared.Databases.Tests is a unit test library for Peereflits.Shared.Databases.</Description>
+    <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.msbuild" Version="6.0.2">
+    <PackageReference Include="coverlet.msbuild" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="6.0.2">
+    <PackageReference Include="coverlet.collector" Version="6.0.4">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-
-    <PackageReference Include="Microsoft.Extensions.Configuration" Condition=" '$(TargetFramework)' == 'net9.0' " Version="9.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Condition=" '$(TargetFramework)' == 'net8.0' " Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Condition=" '$(TargetFramework)' == 'net6.0' " Version="6.0.2" />
-
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Condition=" '$(TargetFramework)' == 'net9.0' " Version="9.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Condition=" '$(TargetFramework)' == 'net8.0' " Version="8.0.2" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Condition=" '$(TargetFramework)' == 'net6.0' " Version="6.0.1" />
-
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Condition=" '$(TargetFramework)' == 'net9.0' " Version="9.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Condition=" '$(TargetFramework)' == 'net8.0' " Version="8.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Condition=" '$(TargetFramework)' == 'net6.0' " Version="6.0.1" />
-
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
     <PackageReference Include="NSubstitute" Version="5.3.0" />
-    <PackageReference Include="xunit" Version="2.9.2" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
+    <PackageReference Include="xunit" Version="2.9.3" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
