--- a/src/Databases/Databases.csproj
+++ b/src/Databases/Databases.csproj
@@ -3,7 +3,6 @@
   <PropertyGroup>
     <AssemblyName>Peereflits.Shared.Databases</AssemblyName>
     <RootNamespace>Peereflits.Shared.Databases</RootNamespace>
-    <TargetFrameworks>net6.0;net8.0;net9.0</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -35,8 +34,9 @@ This component is a shared infrastructure library of Peereflits.
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.1.35" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+    <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Condition=" '$(TargetFramework)' != 'net6.0' " Version="6.0.1" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Condition=" '$(TargetFramework)' == 'net6.0' " Version="5.2.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Condition=" '$(TargetFramework)' == 'net9.0' " Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Condition=" '$(TargetFramework)' == 'net8.0' " Version="8.0.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Condition=" '$(TargetFramework)' == 'net6.0' " Version="6.0.4" />
