--- a/src/nuget.config
+++ b/src/nuget.config
@@ -4,4 +4,13 @@
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
     <add key="github" value="https://nuget.pkg.github.com/peereflits/index.json" />
   </packageSources>
+
+  <!-- Map package sources for Central Package Management to avoid NU1507 -->
+  <packageSourceMapping>
+    <packageSource key="nuget.org">
+      <package pattern="*" />
+    </packageSource>
+    <!-- If you need packages from your GitHub Packages feed, add explicit patterns here.
+         Leave it empty to prefer nuget.org for all packages. -->
+  </packageSourceMapping>
 </configuration>
